Closed
Bug 1476014
Opened 3 years ago
Closed 3 years ago
[Static Analysis] DEAD_STORE error in toolkit/components/remote/nsXRemoteService.cpp
Categories
(Toolkit :: General, defect, P3)
Toolkit
General
Tracking
()
RESOLVED
FIXED
mozilla63
Tracking | Status | |
---|---|---|
firefox63 | --- | fixed |
People
(Reporter: rbartlensky, Assigned: rbartlensky)
References
Details
Attachments
(1 file)
toolkit/components/remote/nsXRemoteService.cpp:195: error: DEAD_STORE The value written to &i (type int) is never used. 193. sMozProfileAtom = XAtoms[i++]; 194. sMozProgramAtom = XAtoms[i++]; 195. > sMozCommandLineAtom = XAtoms[i++]; 196. }
Comment hidden (mozreview-request) |
![]() |
||
Comment 2•3 years ago
|
||
mozreview-review |
Comment on attachment 8992387 [details] Bug 1476014: Remove unnecessary postincrement. https://reviewboard.mozilla.org/r/257250/#review264076
Attachment #8992387 -
Flags: review?(nfroyd) → review+
Assignee | ||
Updated•3 years ago
|
Keywords: checkin-needed
Pushed by aiakab@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/10ca5b14dbdb Remove unnecessary postincrement. r=froydnj
Keywords: checkin-needed
Comment 4•3 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/10ca5b14dbdb
Status: NEW → RESOLVED
Closed: 3 years ago
status-firefox63:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
You need to log in
before you can comment on or make changes to this bug.
Description
•