Bug 1476014: Remove unnecessary postincrement. r=froydnj

MozReview-Commit-ID: 6tvC4VWcUiC